Fix table of contents to have a background (and not the image which is hard to read)

--- a/assets/sass/_partial/_toc.scss
+++ b/assets/sass/_partial/_toc.scss
@@ -4,6 +4,8 @@ nav.toc {
   top: 1rem;
   align-self: start;
   width: 16em;
+  background: white;
+  padding-left: 0.5em;
 }
 
 .toc-title {
